Fix guides search autcomplete on small viewports

--- a/guides/source/assets/stylesheets/components/_search.scss
+++ b/guides/source/assets/stylesheets/components/_search.scss
@@ -2,7 +2,7 @@
   width: 100%;
 
   .ds-dropdown-menu {
-    width: 100%;
+    min-width: 100%;
     max-width: 100%;
   }
 
